; ModuleID = '/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_pack_simple_dict.c'
source_filename = "/home/carl/AnghaBench/skynet/lualib-src/extr_lua-bson.c_pack_simple_dict.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bson = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.bson*, i32)* @pack_simple_dict to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pack_simple_dict(i32* %0, %struct.bson* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.bson*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.bson* %1, %struct.bson** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.bson*, %struct.bson** %5, align 8
  %10 = call i32 @reserve_length(%struct.bson* %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @lua_pushnil(i32* %11)
  br label %13

13:                                               ; preds = %17, %3
  %14 = load i32*, i32** %4, align 8
  %15 = call i64 @lua_next(i32* %14, i32 -2)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %25

17:                                               ; preds = %13
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @lua_type(i32* %18, i32 -2)
  store i32 %19, i32* %8, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = load %struct.bson*, %struct.bson** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @pack_dict_data(i32* %20, %struct.bson* %21, i32 %22, i32 %23)
  br label %13

25:                                               ; preds = %13
  %26 = load %struct.bson*, %struct.bson** %5, align 8
  %27 = call i32 @write_byte(%struct.bson* %26, i32 0)
  %28 = load %struct.bson*, %struct.bson** %5, align 8
  %29 = load %struct.bson*, %struct.bson** %5, align 8
  %30 = getelementptr inbounds %struct.bson, %struct.bson* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = load i32, i32* %7, align 4
  %33 = sext i32 %32 to i64
  %34 = sub nsw i64 %31, %33
  %35 = load i32, i32* %7, align 4
  %36 = call i32 @write_length(%struct.bson* %28, i64 %34, i32 %35)
  ret void
}

declare dso_local i32 @reserve_length(%struct.bson*) #1

declare dso_local i32 @lua_pushnil(i32*) #1

declare dso_local i64 @lua_next(i32*, i32) #1

declare dso_local i32 @lua_type(i32*, i32) #1

declare dso_local i32 @pack_dict_data(i32*, %struct.bson*, i32, i32) #1

declare dso_local i32 @write_byte(%struct.bson*, i32) #1

declare dso_local i32 @write_length(%struct.bson*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
